--- a/package.json
+++ b/package.json
@@ -20,7 +20,19 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    {
+      "locator": "https://github.com/apache/cordova-plugin-geolocation.git",
+      "id": "cordova-plugin-geolocation"
+    },
+    {
+      "locator": "https://github.com/katzer/cordova-plugin-local-notifications.git",
+      "id": "de.appplant.cordova.plugin.local-notification"
+    },
+    {
+      "locator": "https://github.com/katzer/cordova-plugin-app-event.git",
+      "id": "cordova-plugin-app-event"
+    }
   ],
   "cordovaPlatforms": [
     "android"
